feature: updated tests; implemented money class to abstract money related fields; utilized object calisthenics no primitive return and first class collections to update classes